<resources>
    <string name="app_name">FITAPPMOBILE</string>
    <string name="Google_sign_in">Sign in with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Lasal Strings-->
    <string name="addExercises">Add Workout</string>
    <string name="ExerciseName">Exercise Name</string>
    <string name="Calories">Calories</string>
    <string name="addExercise">Add Exercise</string>
    <string name="editExercise">Edit Exercise</string>
    <string name="editExercises">Edit Workouts</string>
    <string name="customExercises">Custom Workouts</string>
    <string name="LoremIpsum">
    is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
    </string>
    <string name="editExerciseMain">Edit</string>
    <string name="deleteExerciseMain">Delete</string>


    <!-- Senura Strings -->

    <!-- Add Daily Goal -->
    <string name="enterCurrentDate"> Current Date</string>
    <string name="enterCurrentWeight">Enter Current Weight</string>
    <string name="enterTargetSteps">Enter Target Steps</string>
    <string name="enterTargetHeartPoints">Enter Target Heart Points</string>
    <string name="addbtn">Add</string>
    <string name="addRequirement">Add Daily Goal</string>

    <!-- Update Daily Goal -->
    <string name="updateCurrentWeight">Update Current Weight</string>
    <string name="updateTargetSteps">Update Target Steps</string>
    <string name="updateTargetHeartPoints">Update Target Heart Points</string>
    <string name="updatebtn">Update</string>
    <string name="updateRequirement">Update Daily Goal</string>

    <!-- Add Daily Progress -->
    <string name="addCompletedSteps">Enter Steps</string>
    <string name="addHeartPoints">Enter Heart Points</string>



    <!-- Jayani Strings -->

    <string name="addmealname"> Meal Name</string>
    <string name="addMealLabel">Add Meal</string>
    <string name="updateMealLabel">Update Meal</string>
    <string name="mealdescription">Description</string>
    <string name="addMealBtn">Add Meal</string>
    <string name="editMealMain">Edit</string>
    <string name="deleteMealMain">Delete</string>
    <string name="updateMealBtn">Update Meal</string>
    <string name="addMealMainBtn">Add</string>

    <!-- Chums Strings -->

    <string name="adddiseasename">Disease Name</string>
    <string name="addDiseaseDescription">Description</string>
    <string name="addDiseaseBtn">Add Disease</string>
    <string name="addDiseaseMainBtn">Add</string>
    <string name="editDiseaseMain">Edit</string>
    <string name="deleteDiseaseMain">Delete</string>
    <string name="addDiseaseLabel">Add Diseases</string>
    <string name="updateDiseaseLabel">Update Diseases</string>
    <string name="updateDiseaseBtn">Update Disease</string>


</resources>