<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/fragment_disease_container"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-105dp"
        tools:layout_editor_absoluteY="104dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/path_816"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/button7"
                                android:layout_width="105dp"
                                android:layout_height="39dp"
                                android:background="@drawable/button"
                                android:drawableRight="@drawable/ic_baseline_delete_24"
                                android:text="@string/deleteDiseaseMain"
                                android:textSize="10sp"
                                app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.821"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView7"
                                app:layout_constraintVertical_bias="0.898" />

                            <Button
                                android:id="@+id/editExerciseBtn"
                                android:layout_width="92dp"
                                android:layout_height="40dp"
                                android:background="@drawable/button"
                                android:drawableRight="@drawable/ic_baseline_create_24"
                                android:text="@string/editDiseaseMain"
                                android:textSize="10sp"
                                app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.173"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView7"
                                app:layout_constraintVertical_bias="0.891" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="160dp"
                                android:layout_height="44dp"
                                android:fontFamily="sans-serif-black"
                                android:text="Disease"
                                android:textSize="30sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.497"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.075" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="262dp"
                                android:layout_height="84dp"
                                android:text="@string/LoremIpsum"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.464" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/path_816"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/button7"
                                android:layout_width="105dp"
                                android:layout_height="39dp"
                                android:background="@drawable/button"
                                android:drawableRight="@drawable/ic_baseline_delete_24"
                                android:text="Delete"
                                android:textSize="10sp"
                                app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.821"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView7"
                                app:layout_constraintVertical_bias="0.898" />

                            <Button
                                android:id="@+id/editExerciseBtn"
                                android:layout_width="92dp"
                                android:layout_height="40dp"
                                android:background="@drawable/button"
                                android:drawableRight="@drawable/ic_baseline_create_24"
                                android:text="Edit"
                                android:textSize="10sp"
                                app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.173"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView7"
                                app:layout_constraintVertical_bias="0.891" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="160dp"
                                android:layout_height="44dp"
                                android:fontFamily="sans-serif-black"
                                android:text="Disease"
                                android:textSize="30sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.497"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.075" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="262dp"
                                android:layout_height="84dp"
                                android:text="@string/LoremIpsum"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.464" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/path_816"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="160dp"
                                android:layout_height="44dp"
                                android:fontFamily="sans-serif-black"
                                android:text="Disease"
                                android:textSize="30sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.497"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.075" />

                            <Button
                                android:id="@+id/button7"
                                android:layout_width="105dp"
                                android:layout_height="39dp"
                                android:background="@drawable/button"
                                android:drawableRight="@drawable/ic_baseline_delete_24"
                                android:text="Delete"
                                android:textSize="10sp"
                                app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.821"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView7"
                                app:layout_constraintVertical_bias="0.898" />

                            <Button
                                android:id="@+id/editExerciseBtn"
                                android:layout_width="92dp"
                                android:layout_height="40dp"
                                android:background="@drawable/button"
                                android:drawableRight="@drawable/ic_baseline_create_24"
                                android:text="Edit"
                                android:textSize="10sp"
                                app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.173"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView7"
                                app:layout_constraintVertical_bias="0.891" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="262dp"
                                android:layout_height="84dp"
                                android:text="@string/LoremIpsum"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.464" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/path_816"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/addDiseaseBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/colorAccent"
                                android:text="@string/addDiseaseMainBtn"
                                app:backgroundTint="@android:color/holo_orange_dark"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>